<resources>
    <string name="app_name">PharmKare</string>
    <string name="title_active_login">PharmKare Login</string>
    <string name="password">Contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="current_password">Contraseña actual</string>
    <string name="name">Nombre completo:</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="repeat_password">Confirma la contraseña</string>
    <string name="signup">Sign Up</string>
    <string name="text_signup">No tienes cuenta?</string>
    <string name="link_signup">Sign Up?</string>
    <string name="all">TODO</string>
    <string name="user_email">userdefault@gmail.com</string>
    <string name="user_name">User Default</string>
    <string name="update_profile">Guardar</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="forget_password">¿olvidaste tu contraseña?</string>
    <string name="title_check_email">Verificación de Email</string>
    <string name="subtitle_check_email">Para completar su registro.¡Por favor!, verifica tu correo y después de clic en continuar</string>
    <string name="continue_check_email">Continuar</string>
    <string name="title_account_recovery">Recuperación de la cuenta</string>
    <string name="subtitle_account_recovery">Ingresa tu email para enviar un correo con los pasos para cambiar tu contraseña actual</string>
    <string name="recovery_account">Enviar</string>
    <string name="title_update_password">Cambio de contraseña</string>
    <string name="subtitle_update_password">Por motivos de seguridad, para cambiar tu contraseña debes ingresar tu contraseña actual</string>
    <string name="title_delete_account">Eliminar cuenta</string>
    <string name="subtitle_delete_account">Por motivos de seguridad, debes ingresar tu contraseña actual para eliminar tu cuenta</string>
    <string name="delete">Eliminar</string>

    <!-- Para los siguientes activity-->
    <string name="medicamento">Medicamentos</string>
    <string name="nombre_medicamento">Nombre del medicamento:</string>
    <string name="precio">Precio:</string>
    <string name="indicaciones">Indicaciones de uso:</string>
    <string name="contra_indicaciones">Contra-indicaciones:</string>
    <string name="imagen">Imagen</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="comprar">Comprar</string>
    <string name="añadir">Añadir</string>


</resources>